Channel network messaging
Signed-off-by: Chris Sanders <zidane@outlook.com>

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
 name: AlmuraForgeBridge
-main: com.almuramc.almuraforgebridge.BridgeMain
+main: com.almuramc.almuraforgebridge.BridgePluginin
 version: 1.0
 authors: [AlmuraDev]
