--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
 name: AlmuraForgeBridge
-main: com.almuramc.almuraforgebridge.BridgePluginin
+main: com.almuramc.almuraforgebridge.BridgePlugin
 version: 1.0
 authors: [AlmuraDev]
