--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <systemPath>${project.basedir}/libs/Bukkit.jar</systemPath>
 		</dependency>
 		<dependency>
+			<groupId>org.bukkit</groupId>
+			<artifactId>craftbukkit</artifactId>
+			<version>1.6.4-R2.1</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/libs/almura-server-1.6.4-R2.1-SNAPSHOT.jar</systemPath>
+		</dependency>	
+		<dependency>
 			<groupId>net.ess3</groupId>
 			<artifactId>api</artifactId>
 			<version>unknown</version>
