--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
             <scope>system</scope>
 			<systemPath>${project.basedir}/libs/Vault-1.4.1.jar</systemPath>
         </dependency>	
+        <dependency>
+            <groupId>com.bekvon</groupId>
+            <artifactId>residence</artifactId>
+            <version>2.7</version>
+            <scope>system</scope>
+			<systemPath>${project.basedir}/libs/Residence-2.7.jar</systemPath>
+        </dependency>
 	</dependencies>
 	<!-- Build plugin repositories -->
 	<pluginRepositories>
