--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,51 @@
 allowed-tweakers:
-    - Test
+    - cpw.mods.fml.common.launcher.FMLTweaker
+    - cpw.mods.fml.common.launcher.FMLInjectionAndSortingTweaker
+    - cpw.mods.fml.common.launcher.FMLDeobfTweaker
+    - cpw.mods.fml.common.launcher.TerminalTweaker
 allowed-mods:
-    - Test
+    - almura
+    - almurasdk
+    - Baubles
+    - BiblioCraft
+    - BuildCraft|Builders
+    - BuildCraft|Robotics
+    - BuildCraft|Silicon
+    - BuildCraft|Energy
+    - BuildCraft|Factory
+    - BuildCraft|Transport
+    - CarpentersBlocks
+    - CoFHCore
+    - CustomSpawner
+    - guide
+    - IC2
+    - inventorytweaks
+    - IronChest    
+    - malisiscore
+    - malisisdoors
+    - Mantle
+    - MineFactoryReloaded
+    - MineFactoryReloaded|CompatBackTools
+    - MineFactoryReloaded|CompatExtraBiomes
+    - MineFactoryReloaded|CompatTwilightForest
+    - MineFactoryReloaded|CompatChococraft
+    - MineFactoryReloaded|CompatProjRed
+    - MineFactoryReloaded|CompatMystcraft
+    - MineFactoryReloaded|CompatIC2
+    - MineFactoryReloaded|CompatAtum
+    - MineFactoryReloaded|CompatTConstruct
+    - MineFactoryReloaded|CompatAppliedEnergistics
+    - MineFactoryReloaded|CompatBuildCraft
+    - MineFactoryReloaded|CompatThaumcraft
+    - MineFactoryReloaded|CompatRailcraft
+    - MineFactoryReloaded|CompatForestry
+    - MineFactoryReloaded|CompatSufficientBiomes
+    - MineFactoryReloaded|CompatVanilla
+    - MineFactoryReloaded|CompatForgeMicroblock
+    - MoCreatures
+    - Railcraft
+    - Thaumcraft
+    - ThermalDynamics
+    - ThermalExpansion
+    - ThermalFoundation
+    - TConstruct
